@@ -61,6 +61,9 @@ Release 1.1 (in development)
 
 * Added :confval:`man_show_urls` config value.
 
+* #259: HTML table rows now have even/odd CSS classes to enable
+  "Zebra styling".
+
 
 Release 1.0.7 (in development)
 ==============================
